[gd_scene load_steps=17 format=2]

[ext_resource path="res://Domum/Sources/Image/Personagem_azul.png" type="Texture" id=1]
[ext_resource path="res://Domum/Sources/Image/dialogbox/DialogBoxAren.png" type="Texture" id=2]
[ext_resource path="res://Domum/Sources/Image/dialogbox/DialogBoxBlueBiome.png" type="Texture" id=3]
[ext_resource path="res://Domum/Sources/Image/CrowDia.png" type="Texture" id=4]
[ext_resource path="res://Domum/Sources/Image/aurumComp.png" type="Texture" id=5]
[ext_resource path="res://Domum/Scripts/DialogBlue.gd" type="Script" id=6]
[ext_resource path="res://Domum/Sources/Themes/FontDialog.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menu/Sources/Fonts/Rose Cake - Personal Use.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Domum/Sources/Audios/dialoguend_sfx.wav" type="AudioStream" id=9]
[ext_resource path="res://Domum/Sources/Audios/dialogue_sfx.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.392157 ), Color( 0, 0, 0, 0.392157 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.392157 ), Color( 0, 0, 0, 0.392157 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ArenIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ProtaSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 233.296, 525.533 ), Vector2( 248.432, 508.205 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ProtaSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.593, 0.593 ), Vector2( 0.647553, 0.633469 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Picture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1626.51, 444.716 ), Vector2( 1631.47, 451.899 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Picture:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.19, 0.19 ), Vector2( 0.183, 0.183 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ArenOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ProtaSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 248.432, 508.205 ), Vector2( 233.296, 525.533 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ProtaSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.647553, 0.633469 ), Vector2( 0.593, 0.593 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Picture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1631.47, 451.899 ), Vector2( 1626.51, 444.716 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Picture:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.183, 0.183 ), Vector2( 0.19, 0.19 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1830, 1008 ), Vector2( 1830, 965.485 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="DialogBlue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
dialogPath = "res://Domum/DialogText/DialogBlueText.json"

[node name="Back" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Back"]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[node name="AnimationPic" type="AnimationPlayer" parent="."]
anims/ArenIn = SubResource( 3 )
anims/ArenOut = SubResource( 4 )

[node name="Picture" type="Sprite" parent="."]
position = Vector2( 1631.47, 451.899 )
scale = Vector2( 0.183, 0.183 )
texture = ExtResource( 1 )

[node name="ProtaSprite" type="Sprite" parent="."]
position = Vector2( 248.432, 508.205 )
scale = Vector2( 0.647553, 0.633469 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="dialogAren" type="Sprite" parent="."]
position = Vector2( 961.583, 920 )
scale = Vector2( 0.990009, 1 )
texture = ExtResource( 2 )

[node name="dialogBlue" type="Sprite" parent="."]
position = Vector2( 961.583, 920 )
scale = Vector2( 0.99, 1 )
texture = ExtResource( 3 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 832.0
margin_right = 1854.0
margin_bottom = 983.005
rect_scale = Vector2( 0.942, 1 )
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "aaaaaaaaalo"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Name" type="RichTextLabel" parent="."]
anchor_right = 0.506
anchor_bottom = 0.429
margin_left = 152.0
margin_top = 744.0
margin_right = -499.52
margin_bottom = 352.68
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crown" type="Sprite" parent="."]
position = Vector2( 1830, 1008 )
scale = Vector2( 0.172, 0.165 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Crown"]
anims/CrownUP = SubResource( 5 )

[node name="Info" type="RichTextLabel" parent="."]
margin_left = 45.0
margin_top = 1014.51
margin_right = 976.0
margin_bottom = 1062.51
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "[R] Avançar     [SPACE] Pular"
text = "[R] Avançar     [SPACE] Pular"

[node name="sfx_r" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
bus = "SFX"

[node name="sfx_space" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -40.0
bus = "SFX"
